apps/longhorn-system/longhorn/ingress/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress-authentik
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`longhorn.${SECRET_DOMAIN}`)"
      middlewares:
        - name: authentik
          namespace: authentik
      priority: 10
      services:
        - name: longhorn-frontend
          port: 80
    - kind: Rule
      match: "Host(`longhorn.${SECRET_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          namespace: authentik
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
  tls:
    secretName: longhorn-tls
